5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1716_2508.log
== TEST (2019-05-07 16:20:48) 
-- CODE:
x = 1
while (x <= 5):
print(x)
x = x + 1
-- ERROR:
File "XXXX", line 3
    print(x)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:21:01) 
-- CODE:
x = 1
while (x <= 5):
	print(x)
	x = x + 1
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:21:18) 
-- CODE:
x = 1
while (x <= 5):
	print(x)
	x = x + 2
-- OUTPUT:
1
3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:21:26) 
-- CODE:
x = 1
while (x <= 5):
	print(x)
	x = x
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:21:56) 
-- CODE:
x = 1
while (x <= 5):
	print(x)
	x = x
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:21:56) 
-- CODE:
x = 1
while (x <= 5):
	print(x)
	x = x
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:21:56) 
-- CODE:
x = 1
while (x <= 5):
	print(x)
	x = x
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:21:56) 
-- CODE:
x = 1
while (x <= 5):
	print(x)
	x = x
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:59:05) 
-- CODE:
x = 1
while (x <= 5):
	print(x)
	x = x
-- EXECUTION TIME:
411.786
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:15:56) 
-- CODE:
def leibniz_pi_1 (numero_ de_termos):
	conta=0
	acum=0.0
	den=1
	while conta < numero_de_termos:
		acum= acum + (1.0/den) * (-1)**conta
		dem= dema +2
		conta= conta + 1
		return 4*acum
		
-- EXECUTION TIME:
0.180602
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 1
    def leibniz_pi_1 (numero_ de_termos):
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:16:17) 
-- CODE:
def leibniz_pi_1 (numero_ de_termos):
	conta=0
	acum=0.0
	den=1
	while conta < numero_de_termos:
		acum= acum + (1.0/den) * (-1)**conta
		dem= dema +2
		conta= conta + 1
	return 4 * acum
		
-- EXECUTION TIME:
0.196515
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 1
    def leibniz_pi_1 (numero_ de_termos):
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:16:28) 
-- CODE:
def leibniz_pi_1 (numero_ de_termos):
	conta=0
	acum=0.0
	den=1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem +2
		conta= conta + 1
	return 4 * acum
		
-- EXECUTION TIME:
0.190645
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 1
    def leibniz_pi_1 (numero_ de_termos):
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:17:06) 
-- CODE:
from math import *
def leibniz_pi_1 (numero_ de_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem +2
		conta= conta + 1
	return 4 * acum
		
-- EXECUTION TIME:
0.141268
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 2
    def leibniz_pi_1 (numero_ de_termos):
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:17:07) 
-- CODE:
from math import *
def leibniz_pi_1 (numero_ de_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem +2
		conta= conta + 1
	return 4 * acum
		
-- EXECUTION TIME:
0.141283
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 2
    def leibniz_pi_1 (numero_ de_termos):
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:17:11) 
-- CODE:
from math import *
def leibniz_pi_1 (numero_ de_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem +2
		conta= conta + 1
	return 4 * acum
		
-- ERROR:
File "XXXX", line 2
    def leibniz_pi_1 (numero_ de_termos):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:18:11) 
-- CODE:
from math import *
def leibniz_pi_1 (numero_ de_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4 * acum
		
-- EXECUTION TIME:
0.138488
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 2
    def leibniz_pi_1 (numero_ de_termos):
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:19:16) 
-- CODE:
from math import *

def leibniz_pi_1 (numero_ de_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
		
-- EXECUTION TIME:
0.176258
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 3
    def leibniz_pi_1 (numero_ de_termos):
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:19:25) 
-- CODE:
from math import *
def leibniz_pi_1 (numero_ de_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
		
-- ERROR:
File "XXXX", line 2
    def leibniz_pi_1 (numero_ de_termos):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:19:51) 
-- CODE:
from math import *
def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
		
-- EXECUTION TIME:
0.139092
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:

-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:20:16) 
-- CODE:
from math import *
def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return print(around(4*acum,10))
		
-- EXECUTION TIME:
0.129695
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:

-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:20:45) 
-- CODE:
from math import *
def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
print(round(return 4*acum, 10))
		
-- EXECUTION TIME:
0.246971
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 11
    print(round(return 4*acum, 10))
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:20:52) 
-- CODE:
from math import *
def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
	print(round(return 4*acum, 10))
		
-- EXECUTION TIME:
0.173199
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 11
    print(round(return 4*acum, 10))
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:20:57) 
-- CODE:
from math import *
def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
	print(round(return 4*acum, 10))
		
-- ERROR:
File "XXXX", line 11
    print(round(return 4*acum, 10))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:21:07) 
-- CODE:
from math import *
def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum

		
-- ERROR:
File "XXXX", line 11
    print(round(return 4*acum, 10))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:21:23) 
-- CODE:
from math import *

def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum

		
-- EXECUTION TIME:
0.132879
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:

-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:25:15) 
-- CODE:
from math import *

def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum

		
-- EXECUTION TIME:
0.264406
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:

-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:25:54) 
-- CODE:
from math import *

def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
print(round(return*acum,10))	

		
-- ERROR:
File "XXXX", line 12
    print(round(return*acum,10))	
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:26:13) 
-- CODE:
from math import *

def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
	print(round(return*acum,10))	

		
-- EXECUTION TIME:
0.149388
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 12
    print(round(return*acum,10))	
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:26:20) 
-- CODE:
from math import *

def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
	print(round(return*acum,10))	

		
-- EXECUTION TIME:
0.153747
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 12
    print(round(return*acum,10))	
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:26:26) 
-- CODE:
from math import *

def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
print(round(return*acum,10))	

		
-- EXECUTION TIME:
0.232303
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 12
    print(round(return*acum,10))	
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:26:27) 
-- CODE:
from math import *

def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
print(round(return*acum,10))	

		
-- ERROR:
File "XXXX", line 12
    print(round(return*acum,10))	
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:26:37) 
-- CODE:
from math import *

def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
print(return*acum)	

		
-- EXECUTION TIME:
0.13631
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 12
    print(return*acum)	
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:26:39) 
-- CODE:
from math import *

def leibniz_pi_1(num_termos):
	conta = 0
	acum = 0.0
	den = 1
	while conta < numero_de_termos:
		acum = acum + (1.0/den) * (-1)**conta
		dem= dem + 2
		conta= conta + 1
	return 4*acum
print(return*acum)	

		
-- ERROR:
File "XXXX", line 12
    print(return*acum)	
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:45:23) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
		contador_pares = contador_pares + 1
		num = num + 1
		print(contador_pares)
-- ERROR:
File "XXXX", line 12
    print(return*acum)	
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:45:31) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
		contador_pares = contador_pares + 1
		num = num + 1
print(contador_pares)
-- ERROR:
File "XXXX", line 12
    print(return*acum)	
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:46:12) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
	contador_pares = contador_pares + 1
	num = num + 1
print(contador_pares)

-- ERROR:
File "XXXX", line 5
    contador_pares = contador_pares + 1
                 ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:46:21) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
	contador_pares = contador_pares + 1
	num = num + 1
print(contador_pares)

-- ERROR:
File "XXXX", line 5
    contador_pares = contador_pares + 1
                 ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:46:35) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
		contador_pares = contador_pares + 1
		num = num + 1
print(contador_pares)

-- ERROR:
File "XXXX", line 5
    contador_pares = contador_pares + 1
                 ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:46:38) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
		contador_pares = contador_pares + 1
		num = num + 1
print(contador_pares)

-- ERROR:
File "XXXX", line 5
    contador_pares = contador_pares + 1
                 ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:46:39) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
		contador_pares = contador_pares + 1
		num = num + 1
print(contador_pares)

-- ERROR:
File "XXXX", line 5
    contador_pares = contador_pares + 1
                 ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:46:39) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
		contador_pares = contador_pares + 1
		num = num + 1
print(contador_pares)

-- ERROR:
File "XXXX", line 5
    contador_pares = contador_pares + 1
                 ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:47:14) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
		contador_pares = contador_pares + 1
	num = num + 1
print(contador_pares)

-- OUTPUT:
51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:47:29) 
-- CODE:
num = 100
contador_pares = 0
while num <= 200:
	if num % 2 == 0:
		contador_pares = contador_pares + 1
	num = num + 1
print(contador_pares)

-- OUTPUT:
51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:38:50) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))

-- EXECUTION TIME:
0.143279
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
